<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#880E4F"
    android:orientation="vertical"
    tools:context="com.login.simple.simpleloginapp.MainActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@mipmap/ic_launcher"
        android:visibility="gone"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:met_baseColor="#FFFFFF"
            app:met_primaryColor="#982360"
            android:maxLines="1"
            app:met_errorColor="#ddaa00"
            android:hint="@string/email_user_name"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            app:met_baseColor="#FFFFFF"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            android:hint="@string/password"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            app:met_baseColor="#FFFFFF"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            android:hint="@string/confirm_password"/>

        <com.andexert.library.RippleView
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_toLeftOf="@+id/more2"
            android:background="@color/colorAccent"
            app:rv_color="@android:color/white">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/log_in"
               android:gravity="center"
               android:textSize="20sp"/>

        </com.andexert.library.RippleView>
        <com.andexert.library.RippleView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_toLeftOf="@+id/more2"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            app:rv_color="@android:color/holo_blue_bright">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:gravity="center"
                android:textSize="20sp"/>

        </com.andexert.library.RippleView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_blue_bright" />

</LinearLayout>
